syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "TeamService.proto";
import "SpecificDateTime.proto";
option java_multiple_files = true;
option csharp_namespace = "GrpcNjordClient.Project";
package com.sep3yg9.njorddata.grpc.protobuf.project;

message CreatingProject {
  string name = 1;
  int32 teamId = 2;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime deadline = 3;
}

message UpdatingProject {
  int32 id = 1;
  string name = 2;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime deadline = 3;
  repeated Requirement requirements = 4;
}

message Requirement {
  int32 id = 1;
  int32 idproject = 2;
  string content = 3;
}

message ProjectGrpc {
  int32 id = 1;
  string name = 2;
  com.sep3yg9.njorddata.grpc.protobuf.team.TeamGrpc teamId = 3;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime startDate = 4;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime deadline = 5;
  repeated Requirement requirements = 6;
}

message BasicProject {
  int32 id = 1;
  string projectName = 2;
  string teamName = 3;
}

message BasicProjectList {
  repeated BasicProject projects = 1;
}

service ProjectService {
  rpc CreateProject(CreatingProject) returns (ProjectGrpc);
  rpc UpdateProject(UpdatingProject) returns (ProjectGrpc);
  rpc DeleteProject(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc GetById(google.protobuf.Int32Value) returns (ProjectGrpc);
  rpc GetByMemberId(google.protobuf.Int32Value) returns (BasicProjectList);
}

